redbot/ciliumnetworkpolicy-redbot.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: redbot
  namespace: redbot
spec:
  endpointSelector: {}
  egress:
    # Allow to the world
    - toEntities:
        - world

    # Allow to any pods in this namespace
    - toEndpoints:
        - {}

    # Allow to Kube DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
